--- a/assets/css/signUp.css
+++ b/assets/css/signUp.css
@@ -1,13 +1,6 @@
 @import url(../css/minified.css);
-/* .auth-sidebar-content{
-    background-color: #fb9403;
-    background-image: url(../img/signUp/fabric-light.png);
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
-    margin-top: 30px;
-    height: 100vh;
-} */
+
+@import url(../../assets/css/style.css);
 
 * a{
     text-decoration: none;
@@ -36,8 +29,13 @@
 }
 
 
+.fontAwesome {
+    font-weight: 400;
+    font-family: 'Montserrat', FontAwesome, sans-serif;
 
-.fa-solid,
+
+  }
+
   .fa-brands,
   .fa-sharp-solid {
     background-color: rgb(255, 255, 255);
@@ -88,7 +86,4 @@
     color: #ADD8E6;
   }
 
-  .fa-user-ninja.vanished {
-    opacity: 0.2;
-  }
 
